--- a/guipanel.ui
+++ b/guipanel.ui
@@ -108,7 +108,7 @@
      <rect>
       <x>60</x>
       <y>80</y>
-      <width>71</width>
+      <width>81</width>
       <height>21</height>
      </rect>
     </property>
@@ -500,7 +500,7 @@
      <x>10</x>
      <y>250</y>
      <width>181</width>
-     <height>361</height>
+     <height>351</height>
     </rect>
    </property>
    <property name="sizePolicy">
@@ -513,6 +513,9 @@
     <string>View</string>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0,0,0,0,0,0,1">
+    <property name="spacing">
+     <number>4</number>
+    </property>
     <property name="sizeConstraint">
      <enum>QLayout::SetMinimumSize</enum>
     </property>
@@ -1020,7 +1023,7 @@
       <property name="minimumSize">
        <size>
         <width>0</width>
-        <height>60</height>
+        <height>51</height>
        </size>
       </property>
       <widget class="QRadioButton" name="rbAlphaNo">
@@ -1046,7 +1049,7 @@
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>40</y>
+         <y>31</y>
          <width>131</width>
          <height>18</height>
         </rect>
@@ -1062,7 +1065,7 @@
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>20</y>
+         <y>15</y>
          <width>84</width>
          <height>18</height>
         </rect>
@@ -1124,7 +1127,7 @@
      <rect>
       <x>62</x>
       <y>30</y>
-      <width>111</width>
+      <width>78</width>
       <height>20</height>
      </rect>
     </property>
@@ -1380,6 +1383,19 @@
      <string>open it</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="buFlagTex">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>30</y>
+      <width>31</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>...</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QGroupBox" name="animationData">
    <property name="geometry">
@@ -1626,7 +1642,7 @@
      <x>10</x>
      <y>1130</y>
      <width>181</width>
-     <height>281</height>
+     <height>251</height>
     </rect>
    </property>
    <property name="title">
@@ -1798,7 +1814,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>249</y>
+      <y>220</y>
       <width>81</width>
       <height>20</height>
      </rect>
@@ -1811,7 +1827,7 @@
     <property name="geometry">
      <rect>
       <x>15</x>
-      <y>254</y>
+      <y>225</y>
       <width>41</width>
       <height>14</height>
      </rect>
@@ -1827,48 +1843,13 @@
     <property name="geometry">
      <rect>
       <x>140</x>
-      <y>250</y>
+      <y>221</y>
       <width>31</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
      <string>...</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_32">
-    <property name="geometry">
-     <rect>
-      <x>-5</x>
-      <y>225</y>
-      <width>61</width>
-      <height>14</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Rend.Ord:</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-    </property>
-   </widget>
-   <widget class="QSpinBox" name="leMatRendOrd">
-    <property name="geometry">
-     <rect>
-      <x>60</x>
-      <y>220</y>
-      <width>37</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="statusTip">
-     <string>Rendering order (negative = soonest)</string>
-    </property>
-    <property name="minimum">
-     <number>-8</number>
-    </property>
-    <property name="maximum">
-     <number>7</number>
     </property>
    </widget>
    <widget class="QLabel" name="labelShader">
@@ -1979,11 +1960,7 @@
      <string>Click to open file containing this specular map.</string>
     </property>
     <property name="text">
-     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;a href=&quot;link&quot;&gt;&lt;span style=&quot; font-size:8pt; text-decoration: underline; color:#0000ff;&quot;&gt;Specular&lt;/span&gt;&lt;/a&gt;&lt;span style=&quot; font-size:8pt;&quot;&gt;:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     <string>&lt;a href=&quot;link&quot;&gt;Specular&lt;/a&gt;:</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -2009,19 +1986,6 @@ p, li { white-space: pre-wrap; }
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="buFlagMat_2">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>31</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>...</string>
     </property>
    </widget>
   </widget>
@@ -2129,7 +2093,7 @@ p, li { white-space: pre-wrap; }
      <string>Technique: name of the &quot;technique&quot; inside mb.fx file.</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_29">
+   <widget class="QLabel" name="labShaFallback">
     <property name="geometry">
      <rect>
       <x>5</x>
@@ -2139,7 +2103,7 @@ p, li { white-space: pre-wrap; }
      </rect>
     </property>
     <property name="text">
-     <string>Fallback:</string>
+     <string>&lt;a href=&quot;link&quot;&gt;Fallback:&lt;/a&gt;</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
