--- a/askTransformDialog.ui
+++ b/askTransformDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>121</width>
-    <height>392</height>
+    <height>459</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>330</y>
+     <y>390</y>
      <width>101</width>
      <height>61</height>
     </rect>
@@ -449,6 +449,21 @@
      <bool>true</bool>
     </property>
    </widget>
+  </widget>
+  <widget class="QCheckBox" name="applyToLastSel">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>340</y>
+     <width>101</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Apply to
+last selected
+object only</string>
+   </property>
   </widget>
  </widget>
  <resources/>
