--- a/guipanel.ui
+++ b/guipanel.ui
@@ -2143,7 +2143,7 @@
      <rect>
       <x>60</x>
       <y>120</y>
-      <width>111</width>
+      <width>81</width>
       <height>20</height>
      </rect>
     </property>
@@ -2168,7 +2168,7 @@
      <rect>
       <x>60</x>
       <y>60</y>
-      <width>113</width>
+      <width>81</width>
       <height>20</height>
      </rect>
     </property>
@@ -2345,6 +2345,32 @@
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="buFlagSha">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>120</y>
+      <width>31</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>...</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="buFlagReq">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>60</y>
+      <width>31</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>...</string>
     </property>
    </widget>
   </widget>
