--- a/askTransformDialog.ui
+++ b/askTransformDialog.ui
@@ -304,7 +304,7 @@
    <property name="title">
     <string>Scale %</string>
    </property>
-   <widget class="QSpinBox" name="scx">
+   <widget class="QDoubleSpinBox" name="scx">
     <property name="geometry">
      <rect>
       <x>22</x>
@@ -316,20 +316,17 @@
     <property name="wrapping">
      <bool>true</bool>
     </property>
-    <property name="minimum">
-     <number>5</number>
-    </property>
     <property name="maximum">
-     <number>1000</number>
+     <double>1000.000000000000000</double>
     </property>
     <property name="singleStep">
-     <number>5</number>
+     <double>5.000000000000000</double>
     </property>
     <property name="value">
-     <number>100</number>
+     <double>100.000000000000000</double>
     </property>
    </widget>
-   <widget class="QSpinBox" name="scy">
+   <widget class="QDoubleSpinBox" name="scy">
     <property name="enabled">
      <bool>false</bool>
     </property>
@@ -344,20 +341,17 @@
     <property name="wrapping">
      <bool>true</bool>
     </property>
-    <property name="minimum">
-     <number>5</number>
-    </property>
     <property name="maximum">
-     <number>1000</number>
+     <double>1000.000000000000000</double>
     </property>
     <property name="singleStep">
-     <number>5</number>
+     <double>5.000000000000000</double>
     </property>
     <property name="value">
-     <number>100</number>
+     <double>100.000000000000000</double>
     </property>
    </widget>
-   <widget class="QSpinBox" name="scz">
+   <widget class="QDoubleSpinBox" name="scz">
     <property name="enabled">
      <bool>false</bool>
     </property>
@@ -372,17 +366,14 @@
     <property name="wrapping">
      <bool>true</bool>
     </property>
-    <property name="minimum">
-     <number>5</number>
-    </property>
     <property name="maximum">
-     <number>1000</number>
+     <double>1000.000000000000000</double>
     </property>
     <property name="singleStep">
-     <number>5</number>
+     <double>5.000000000000000</double>
     </property>
     <property name="value">
-     <number>100</number>
+     <double>100.000000000000000</double>
     </property>
    </widget>
    <widget class="QLabel" name="label_7">
