--- a/askUvTransformDialog.ui
+++ b/askUvTransformDialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>UV transform</string>
   </property>
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
